# seleniumqt

./: .gitignore  README.md  TODO.md  main.js  main.py  pyproject.toml  pyptoject.toml  requirements.txt
controllable_qt/: driver.py  exception.py  logger.py  remote.py
doc/source/: conf.py
seleniumqt/: __init__.py  __main__.py  comms.py  driver.py  exception.py  logger.py  main.py  remote.py  tests.py
seleniumqt/test_resources/: test_main.html
seleniumqt/tests/: test_driver.py  test_remote.py
